deploy/src/main/deploy/resource-descriptors/dispatch-router/dispatch-router-ext-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amqp-messaging-network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-dispatch-router-ext
spec:
  ports:
  - name: amqps
    nodePort: 30671
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: amqp
    nodePort: 30672
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: amqp-messaging-network
    role: router
    group: ${project.groupId}
  type: NodePort
