deploy/src/main/deploy/resource-descriptors/dispatch-router/dispatch-router-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: amqp-messaging-network
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-dispatch-router
spec:
  port:
    targetPort: 5671
  tls:
    termination: passthrough
  to:
    kind: Service
    name: hono-dispatch-router
